# ChichiTk

./: README.md  Readme.md  example.py  pyproject.toml  requirements.txt  setup.py
chichitk/: __init__.py  aspect_frame.py  buttons.py  canvas_items.py  collapse_frame.py  dropdowns.py  entry_boxes.py  file_dialog.py  function_progress.py  icon_labels.py  icons.py  label_dropdown.py  labels.py  pdf_display.py  player.py  progress_bar.py  scrollable_frame.py  sliders.py  temp_label.py  temp_menu.py  text_boxes.py  timer.py  tool_frame.py  tool_tip.py
