[project]
name = "chichitk"
version = "0.0.1"
authors = [
  { name="Samuel Gibson", email="samuelpgibson12@gmail.com" },
]
description = "Python UI library built upon Tkinter"
readme = "Readme.md"
requires-python = ">=3.7"
install_requires=["opencv-python", "numpy", "Pillow", "PyMuPDF==1.19.5"]
keywords=["python", "tkinter", "custom", "widgets"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SamGibson1/ChichiTk"
"Bug Tracker" = "https://github.com/SamGibson1/ChichiTk/issues"